Bug 5651 - S3 resume: SMP INIT vs _WAK order
Summary: S3 resume: SMP INIT vs _WAK order
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Shaohua
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-11-23 12:34 UTC by Len Brown
Modified: 2006-02-02 14:37 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Patch from Shaohua Li to exchange order of INIT and _WAK (664 bytes, patch)
2005-11-23 12:36 UTC, Len Brown
Details | Diff

Description Len Brown 2005-11-23 12:34:13 UTC
When Linux resumes from S3 on an SMP system,
it evaluates _WAK before invoking the INIT
to reset and bring the non boot processors on-line.

While there appears to be no industry specification
that mandates the relative order of INIT and _WAK,
it appears to be common industry OS practice for
INIT to preceed _WAK, and it appears that some
firmware in the future may depend on that sequence
for correction operation.  In particular, the internal
duties that it performs in _WAK must occur after
the processors have completed being reset by INIT.
Comment 1 Len Brown 2005-11-23 12:36:01 UTC
Created attachment 6668 [details]
Patch from Shaohua Li to exchange order of INIT and _WAK
Comment 2 Len Brown 2005-11-30 20:06:56 UTC
applied to acpi-test
Comment 3 Len Brown 2006-02-02 14:37:31 UTC
Shipped in 2.6.16-rc1-git6 -- closing.

Note You need to log in before you can comment on or make changes to this bug.